@@ -1,3 +1,7 @@
+2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* CBinding.addin.xml: Bump add-in versions.
+
 2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* CBinding.mdp, Makefile.am: Add missing reference.
